samples/_failures_safe/1761401610_054ea9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b57a191.c: In function ‘main’:
./samples/SAFE/__tmp_2b57a191.c:161:19: error: expected ‘]’ at end of input
  161 |     char input[256
      |                   ^
      |                   ]
./samples/SAFE/__tmp_2b57a191.c:161:5: error: expected declaration or statement at end of input
  161 |     char input[256
      |     ^~~~
